2005-06-14  Charles Levert  <charles_levert@gna.org>

	Fix bug #11022 (Line wrapping causes GREP_COLOR background
	color to "smear") by outputting a "clear to end of line"
	control sequence after each SGR (Select Graphic Rendition)
	control sequence (START and END).  This also avoid similar
	problems with HT (tab) characters.

	* src/grep.c (SGR_START, SGR_END, PR_SGR_FMT, PR_SGR_FMT_IF,
	  PR_SGR_START, PR_SGR_END, PR_SGR_START_IF, PR_SGR_END_IF):
	  New macros.
	* src/grep.c (prline): Use the new macros.
	* tests/fmbtest.sh, tests/foad1.sh: Adjust the regression tests
	  to expect the new control sequences.

2005-05-06  Charles Levert  <charles_levert@gna.org>

	* TODO: Add a few more projects and derived versions to check out.

2005-05-05  Charles Levert  <charles_levert@gna.org>

	* README-alpha: Document grep-commit mailing list.
	* TODO: Add various stuff culled from the mailing list.

2005-05-02  Charles Levert  <charles_levert@gna.org>

	* 78 files: Update FSF's civic address, zip code,
	  and citizen relocation code.

2005-04-29  Charles Levert  <charles_levert@gna.org>

	* tests/foad1.sh: Add -b and tricky UTF-8 tests.
	  Display LC_ALL when its value is special.  Patch #3962.

	* ABOUT-NLS: Sync with CVS revision 1.9
	  of 2005-04-13T11:21:55Z from GNU gettext
	  on ":pserver:anoncvs@sources.redhat.com:/cvs/gettext",
	  file "gettext/gettext-runtime/ABOUT-NLS".

2005-04-29  Julian Foad  <julianfoad@btopenworld.com>

	* Makefile.am: Remove reference to long-gone files PATCHES.AC and
	  PATCHES.AM.  Thanks to Tony Abou-Assaleh for this.  Patch #3961.

2005-04-29  Charles Levert  <charles_levert@gna.org>

	* src/grep.c: Fix typo in prline()'s --only-matching --ignore-case
	  code path; this fixes bug #9768 and passes one more test
	  in tests/foad1.sh.  This whole code path should be removed in
	  the future, when other --ignore-case issues are dealt with.

2005-04-28  Julian Foad  <julianfoad@btopenworld.com>
